--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s"> Web Developer Programmer and Data Scientist</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
-                    <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/amadub3"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
-                    <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
+                    <a class="twitter" href=""https://twitter.com/akmad2012><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
                     
                   </li>
                   <li>
-                    <a class="linkedin" href="#"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/amadu-alpha-bah-a3843988/"><i class="icon-social-linkedin"></i></a>
                   </li>
                   <li>
-                    <a class="google" href="#"><i class="icon-social-google"></i></a>
+                    <a class="google" href="https://aboutme.google.com/u/0/"><i class="icon-social-google"></i></a>
                   </li>
                 </ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
@@ -552,8 +552,8 @@
                     <div class="contact-icon">
                       <i class="fa fa-phone"></i>
                     </div>
-                    <p><a href="#">+ (+232) 77 380 578</a></p>
-                    <p><a href="#">+ (+232) 78 981 102</a></p>
+                    <p><a href="#"> (+232) 77 380 578</a></p>
+                    <p><a href="#"> (+232) 78 981 102</a></p>
                   </div>
                 </div>
               </div>
@@ -576,24 +576,24 @@
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               <ul class="social-icon">
                 <li>
-                  <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
+                  <a class="facebook" href="https://www.facebook.com/amadub3"><i class="icon-social-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/akmad2012"><i class="icon-social-twitter"></i></a>
                 </li>
                 
                 <li>
-                  <a class="instagram" href="#"><i class="icon-social-linkedin"></i></a>
+                  <a class="Linkedin" href="https://www.linkedin.com/in/amadu-alpha-bah-a3843988/"><i class="icon-social-linkedin"></i></a>
                 </li>
                 <li>
-                  <a class="instagram" href="#"><i class="icon-social-google"></i></a>
+                  <a class="google+" href="https://aboutme.google.com/u/0/"><i class="icon-social-google"></i></a>
                 </li>
               </ul>
-              <p>Copyright © 2018 Amadu A Bah All Right Reserved</p>
+              <p>Copyright © 2019 Amadu A Bah All Right Reserved</p>
             </div>
           </div>
         </div>
-      </div>
+      </div>   
     </footer>
     <!-- Footer Section End -->
 
